--- a/Pealeht.html
+++ b/Pealeht.html
@@ -17,11 +17,11 @@
 
 <p></p>
 
-<a class="button" href="Teineleht.html">Osad</a>
+<a class="button" href="teine_leht.html">Osad</a>
 
 <p></p>
 
-<a class="button" href="Hinnakiri.html">Tegelased</a>
+<a class="button" href="3_leht.html">Tegelased</a>
 
 <p></p>
 
