Lisatud pildid ja Quotes

--- a/3_leht.html
+++ b/3_leht.html
@@ -9,16 +9,26 @@
     <h2>There are very few things that would make me not want to team up with David Wallace. And Suck It is one of 'em.</h2>
 
     <ul>
-        <li>David Wallace</li>
-        <li>Jo Bennet</li>
-        <li>Robert California</li>
-        <li>Karen Filipelli</li>
-        <li>Holly Flax</li>
-        <li>Jan Levinson</li>
-        <li>Nellie Bertram</li>
-        <li>Gabe Lewis</li>
-        <li>DeAngelo Vickers</li>
-        <li>Mose Schrute</li>
+        <li>David Wallace</li> <img src="DavidWallace.png" width="250" height="250"> 
+        "Suck it!"
+        <li>Jo Bennet</li> <img src="JoBennett.jpg" width="250" height="250">
+        "You don't get to be the most powerful woman in Tallahassee by slacking off. You get there by working hard or marrying rich, and I did both"
+        <li>Robert California</li> <img src="RobertCalifornia.jpg" width="250" height="250">
+        ""
+        <li>Karen Filippelli</li> <img src="KarenFilippelli.jpg" width="250" height="250">
+        " I cried for weeks over that guy, so yeah, seeing him climb out of a PT Cruiser in a ladies warehouse uniform felt pretty good."
+        <li>Holly Flax</li> <img src="HollyFlax.jpg" width="250" height="250">
+        "Okay, so I've gone over this, and I've thought about it, and I just don't think there's any way I can write a report that doesn't end with her being terminated."
+        <li>Jan Levinson</li> <img src="JanLevinson.png" width="250" height="250">
+        "Why is this so hard? That's what she said. Oh, my God, what am I saying?"
+        <li>Nellie Bertram</li> <img src="NellieBertram.jpg" width="250" height="250">
+        "When you use a ridiculous font, no one thinks you have a plan."
+        <li>Gabe Lewis</li> <img src="GabeLewis.jpg" width="250" height="250">
+        ""
+        <li>DeAngelo Vickers</li> <img src="DeangeloVickers.jpg" width="250" height="250">
+        "Yeah I got tons of time. This job's a joke."
+        <li>Mose Schrute</li> <img src="MoseSchrute.jpg" width="250" height="250">
+        Honorable mention- his impecable parking skills, his fear of Harry Potter and his love for Lady Scarecrow.
     </ul>    
 </body>
 </html>
