--- a/Pealeht.html
+++ b/Pealeht.html
@@ -21,8 +21,12 @@
 
 <p></p>
 
+<div id="muutuv-taust"></div>
+  
 <a class="button" href="3_leht.html">Tegelased</a>
 
+<script src="skript.js"></script>
+  
 <p></p>
 
 </body>    
