--- a/Pealeht.html
+++ b/Pealeht.html
@@ -11,6 +11,8 @@
 
 <body>
 
+<div class = 'all' id = 'all'>
+
 <h1>The Office</h1>
 
 <p>Sarja "The Office" tutvustav pealeht, kust saab liikuda edasi osade ja tegelaste tutvustuse juurde</p>
@@ -20,15 +22,13 @@
 <a class="button" href="teine_leht.html">Osad</a>
 
 <p></p>
-
-<div id="muutuv-taust"></div>
   
 <a class="button" href="3_leht.html">Tegelased</a>
   
 <p></p>
 
 <script src="skript.js"></script>
-
+</div>
 </body>    
 
 
