--- a/Pealeht.html
+++ b/Pealeht.html
@@ -24,11 +24,36 @@
 <p></p>
   
 <a class="button" href="3_leht.html">Tegelased</a>
-  
-<p></p>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+
+<a class="button" href="3_leht.html">Tegelased</a>
+<a class="button" href="3_leht.html">Tegelased</a>
+<a class="button" href="3_leht.html">Tegelased</a>
+<a class="button" href="3_leht.html">Tegelased</a>
+</div>
 
 <script src="skript.js"></script>
-</div>
 </body>    
 
 
