--- a/Pealeht.html
+++ b/Pealeht.html
@@ -5,17 +5,19 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <title> Pealeht </title>
+  <title class = 'kiri'> Pealeht </title>
+
+  <script src="skript.js"></script>
 
 </head>
 
 <body>
 
-<div class = 'all' id = 'all'>
+<div class = "all" id="all">
 
-<h1>The Office</h1>
+<h1 class = 'kiri'>The Office</h1>
 
-<p>Sarja "The Office" tutvustav pealeht, kust saab liikuda edasi osade ja tegelaste tutvustuse juurde</p>
+<p class = 'kiri'>Sarja "The Office" tutvustav pealeht, kust saab liikuda edasi osade ja tegelaste tutvustuse juurde</p>
 
 <p></p>
 
@@ -25,36 +27,6 @@
   
 <a class="button" href="3_leht.html">Tegelased</a>
 
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-
-<a class="button" href="3_leht.html">Tegelased</a>
-<a class="button" href="3_leht.html">Tegelased</a>
-<a class="button" href="3_leht.html">Tegelased</a>
-<a class="button" href="3_leht.html">Tegelased</a>
 </div>
-
-<script src="skript.js"></script>
 </body>    
-
-
 </html>
