--- a/teine_leht.html
+++ b/teine_leht.html
@@ -24,9 +24,8 @@
         </header>
     </div>
 
-    <p align="justify" style="padding: 30px; font-family: 'Passion One', sans-serif; font-size: 30px; color: #1E2555;">ALLPOOL ON LOETELU SARI "THE OFFICE" PARIMATEST HOOAEGADEST NING NENDE HOOAEGADE NALJAKAIMATEST EPISOODIDEST.
-        VALIKUTE TEGEMISES ON LÄHTUTUD NII ANTUD HOOAJA/EPISOODI ROTTEN TOMATOES SKOORIST KUI KA ISIKLIKUST ARVAMUSEST :)
-    </p>
+    <p class="preambula">ALLPOOL ON LOETELU SARI "THE OFFICE" PARIMATEST HOOAEGADEST NING NENDE HOOAEGADE NALJAKAIMATEST EPISOODIDEST.
+        VALIKUTE TEGEMISES ON LÄHTUTUD NII ANTUD HOOAJA/EPISOODI ROTTEN TOMATOES SKOORIST KUI KA ISIKLIKUST ARVAMUSEST :) </p>
 
 <div class="content">
 
