--- a/Pealeht.html
+++ b/Pealeht.html
@@ -23,11 +23,11 @@
 
 <p></p>
 
-<!-- <a class="nupp" href="teine_leht.html">Osad</a> -->
+<a class="nupp" href="teine_leht.html">Osad</a>
 
 <p></p>
   
-<!-- <a class="nupp" href="3_leht.html">Tegelased</a> -->
+<a class="nupp" href="3_leht.html">Tegelased</a>
 
 <button class="läbipaistev-nupp">
   <span class="ikoon">Siit leiad sarja lühitutvustuse</span>
