--- a/teine_leht.html
+++ b/teine_leht.html
@@ -16,9 +16,9 @@
             <img class="pilt" src="office_pealkiri.png" alt="">
 
             <div class="lingid">
-                <a href="your_main_page_url">ESIMENE LEHT</a>
-                <b href="your_main_page_url">TEINE LEHT</b>
-                <a href="your_main_page_url">KOLMAS LEHT</a>
+                <a href="Pealeht.html">ESIMENE LEHT</a>
+                <b href="teine_leht.html">TEINE LEHT</b>
+                <a href="3_leht.html">KOLMAS LEHT</a>
             </div>
 
         </header>
