--- a/3_leht.html
+++ b/3_leht.html
@@ -91,8 +91,8 @@
         <p>Honorable mention for his impecable parking skills, his fear of Harry Potter and his love for Lady Scarecrow.</p>
         <p>Mose Schrute is Dwight Schrute's eccentric cousin and farmhand. Mose rarely speaks, but his peculiar and reclusive behavior on the beet farm adds a unique and humorous element to the show.</p>
     </div>
-<a href="leht1">Pealehele</a>
-<a href="leht2">Sarja parimad hooajad</a>  
+<a href="Pealeht.html">Pealehele</a>
+<a href="teine_leht.html">Sarja parimad hooajad</a>  
 
 </body>
 </html>
