--- a/Pealeht.html
+++ b/Pealeht.html
@@ -23,7 +23,9 @@
 
 <p></p>
 
-<a class="nupp" href="teine_leht.html">Osad</a>
+<a href="teine_leht.html" class="läbipaistev-nupp">
+  <span class="ikoon">I</span>
+  <span class="tekst">Mine teisele lehele</span>
 
 <p></p>
   
