--- a/Pealeht.html
+++ b/Pealeht.html
@@ -27,8 +27,13 @@
   <span class="tekst">Mine teisele lehele</span>
 
 <p></p>
+
+<a href="3_leht.html" class="läbipaistev-nupp">
+  <span class="tekst">Mine kolmandale lehele</span>
   
-<a class="nupp" href="3_leht.html">Tegelased</a>
+<!-- <a class="nupp" href="3_leht.html">Tegelased</a> -->
+
+<p></p>
 
 <button class="läbipaistev-nupp">
   <span class="ikoon">Siit leiad sarja lühitutvustuse</span>
