--- a/Pealeht.html
+++ b/Pealeht.html
@@ -23,12 +23,14 @@
 
 <p></p>
 
-<a href="teine_leht.html" class="läbipaistev-nupp">
+<a href="teine_leht.html" class="läbipaistev-nupp esimene-nupp">
+  <span class="ikoon">I nupp</span>
   <span class="tekst">Mine teisele lehele</span>
 
 <p></p>
 
-<a href="3_leht.html" class="läbipaistev-nupp">
+<a href="3_leht.html" class="läbipaistev-nupp teine-nupp">
+  <span class="ikoon">II nupp</span>
   <span class="tekst">Mine kolmandale lehele</span>
   
 <!-- <a class="nupp" href="3_leht.html">Tegelased</a> -->
