--- a/Pealeht.html
+++ b/Pealeht.html
@@ -37,7 +37,7 @@
 
 <p></p>
 
-<button class="läbipaistev-nupp">
+<button class="läbipaistev-nupp tekstiväli">
   <span class="ikoon">Siit leiad sarja lühitutvustuse</span>
   <span class="tekst">"The Office" on hinnatud Ameerika telesari, mis on loodud dokumentaalfilmistiili vormis ning annab vaatajatele ainulaadse võimaluse piiluda ühe kontorikeskkonna, täpsemalt Scrantoni Dunder Mifflini filiaali argipäeva. Sarja keskmes on kontorijuht Michael Scott, kelle kohmakad juhtimisoskused ja ootamatud otsused toovad kaasa mitmesuguseid koomilisi ja tihti piinlikke hetki. Sarja tegelaste galerii on mitmekesine, hõlmates teravaid müügiesindajaid, nutikaid raamatupidajaid ja ekstsentrilisi töötajaid, kelle igapäevaelu muudab eriliseks nende ainulaadne dünaamika. "The Office" haarab vaataja kaasa mitte ainult üheteistkümneks hooajaks järgnevate humoorikate sündmustega, vaid ka karakterite arengu ja omavaheliste suhete sügavusega.
 
