--- a/Pealeht.html
+++ b/Pealeht.html
@@ -23,23 +23,23 @@
 
 <p></p>
 
-<a href="teine_leht.html" class="läbipaistev-nupp esimene-nupp">
+<a href="teine_leht.html" class="nupp esimene-nupp">
   <span class="ikoon">I nupp</span>
-  <span class="tekst">Mine teisele lehele</span>
+  <span class="tekst esimene-tekst">Mine teisele lehele</span>
 
 <p></p>
 
-<a href="3_leht.html" class="läbipaistev-nupp teine-nupp">
+<a href="3_leht.html" class="nupp teine-nupp">
   <span class="ikoon">II nupp</span>
-  <span class="tekst">Mine kolmandale lehele</span>
+  <span class="tekst teine-tekst">Mine kolmandale lehele</span>
   
 <!-- <a class="nupp" href="3_leht.html">Tegelased</a> -->
 
 <p></p>
 
-<button class="läbipaistev-nupp tekstiväli">
+<button class="nupp tekstiväli">
   <span class="ikoon">Siit leiad sarja lühitutvustuse</span>
-  <span class="tekst">"The Office" on hinnatud Ameerika telesari, mis on loodud dokumentaalfilmistiili vormis ning annab vaatajatele ainulaadse võimaluse piiluda ühe kontorikeskkonna, täpsemalt Scrantoni Dunder Mifflini filiaali argipäeva. Sarja keskmes on kontorijuht Michael Scott, kelle kohmakad juhtimisoskused ja ootamatud otsused toovad kaasa mitmesuguseid koomilisi ja tihti piinlikke hetki. Sarja tegelaste galerii on mitmekesine, hõlmates teravaid müügiesindajaid, nutikaid raamatupidajaid ja ekstsentrilisi töötajaid, kelle igapäevaelu muudab eriliseks nende ainulaadne dünaamika. "The Office" haarab vaataja kaasa mitte ainult üheteistkümneks hooajaks järgnevate humoorikate sündmustega, vaid ka karakterite arengu ja omavaheliste suhete sügavusega.
+  <span class="tekst tekstiväli-tekst">"The Office" on hinnatud Ameerika telesari, mis on loodud dokumentaalfilmistiili vormis ning annab vaatajatele ainulaadse võimaluse piiluda ühe kontorikeskkonna, täpsemalt Scrantoni Dunder Mifflini filiaali argipäeva. Sarja keskmes on kontorijuht Michael Scott, kelle kohmakad juhtimisoskused ja ootamatud otsused toovad kaasa mitmesuguseid koomilisi ja tihti piinlikke hetki. Sarja tegelaste galerii on mitmekesine, hõlmates teravaid müügiesindajaid, nutikaid raamatupidajaid ja ekstsentrilisi töötajaid, kelle igapäevaelu muudab eriliseks nende ainulaadne dünaamika. "The Office" haarab vaataja kaasa mitte ainult üheteistkümneks hooajaks järgnevate humoorikate sündmustega, vaid ka karakterite arengu ja omavaheliste suhete sügavusega.
 
     Sari pakub teravmeelset satiiri kontorikultuuri, bürokraatia ning töösuhtluse teemadel. "The Office" üllatab vaatajat ootamatute pöörete ja absurdsete olukordadega, kuid samal ajal loob südantsoojendavaid hetki ning laseb vaatajal luua tugevaid sidemeid tegelastega. See on komöödiasari, mis on suutnud publikut naerutada, kaasa tunda ja mõtlema panna, jättes endast maha kustumatu jälje televaatajate südametes.</span>
 </button>
