--- a/Pealeht.html
+++ b/Pealeht.html
@@ -23,7 +23,7 @@
 
 <p></p>
 
-<a class="nupp" href="teine_leht.html">Parimad osad</a>
+<a class="nupp" href="teine_leht.html" style="right:300px;">Parimad osad</a>
 
 <p></p>
   
